# simple_rwkv

./: .gitignore  Dockerfile  docker-compose.yml  models.toml  pyproject.toml  requirements.txt
simple_rwkv/: __main__.py  lib_raven.py  model.py  ray_model.py  ray_server.py
simple_rwkv/conf/: simple_rwkv.yaml
simple_rwkv/conf/model/: flores-1.0.yaml
tests/: _rwkv.py
