
[tool.poetry]
name = "simple-rwkv"
version = "0.1.0"
description = "A simple key-value store with read and write operations."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"